improve logging using slf4j logger