@@ -1,5 +1,9 @@
 package dev.akila.ticketing_system.model;//TicketPool class using a thread-safe data structure
 
+import dev.akila.ticketing_system.threads.Vendor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.LinkedList;
@@ -7,14 +11,15 @@ import java.util.List;
 
 
 public class TicketPool {
-    private LinkedList<Ticket> ticketsList;
+    private static final Logger logger = LoggerFactory.getLogger(TicketPool.class);
+    private List<Ticket> ticketsList;
     private int maximumTicketCapacity;
     private int availableTicketCount;
 
     public TicketPool(int availableTicketCount, int maximumTicketCapacity) {
         this.maximumTicketCapacity = maximumTicketCapacity;
         this.availableTicketCount = availableTicketCount;
-        this.ticketsList = new LinkedList<>();
+        this.ticketsList = Collections.synchronizedList(new LinkedList<>());
         for (int i = 0; i < availableTicketCount; i++) {
             Ticket ticket = new Ticket("Event " + (i + 1), new BigDecimal(10.0));
             ticketsList.add(ticket);
@@ -22,6 +27,12 @@ public class TicketPool {
     }
 
     //Getters for the TicketPool
+
+
+    public List<Ticket> getTicketsList() {
+        return ticketsList;
+    }
+
 
     //get available tickets
     public int getAvailableTicketCount() {
@@ -32,7 +43,7 @@ public class TicketPool {
         while (ticketsList.size() >= maximumTicketCapacity) {
             try {
                 wait();
-                System.out.println("Ticket Pool is full");
+                logger.info("Ticket Pool is full.");
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
                 System.out.println("Interrupted Exception");
@@ -40,26 +51,23 @@ public class TicketPool {
             }
         }
         ticketsList.add(ticket);
-        System.out.println("ticket added.");
         notifyAll();
     }
 
-    public synchronized void removeTickets() {
+    public synchronized Ticket removeTickets() {
         while (ticketsList.isEmpty()) {
             try {
-                System.out.println("Ticket Pool is empty");
+                logger.info("Ticket Pool is empty.");
                 wait(); //wait if the ticket pool is empty
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
                 System.out.println("Interrupted Exception");
-                return;
+                return null;
             }
         }
-        ticketsList.removeFirst();
-        System.out.println("Ticket removed");
+        Ticket ticket = ticketsList.remove(0);
         notifyAll();
+        return ticket;
     }
-
-
 }
 
